<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/questionNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_weight="0"
        android:textColor="#ffffff"
        android:textSize="80sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ScrollView
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="2">

            <TextView
                style="@android:style/TextAppearance.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:text="@string/question"
                android:textColor="#ffffff"
                android:textStyle="bold" />
        </ScrollView>

        <ScrollView
            android:id="@+id/options"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="30dp"
            android:layout_weight="3">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/optionA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/optionA"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="#ffffff"
                    android:textStyle="italic" />

                <RadioButton
                    android:id="@+id/optionB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/optionB"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="#ffffff"
                    android:textStyle="italic" />

                <RadioButton
                    android:id="@+id/optionC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/optionC"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="#ffffff"
                    android:textStyle="italic" />

                <RadioButton
                    android:id="@+id/optionD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/optionD"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="#ffffff"
                    android:textStyle="italic" />
            </RadioGroup>
        </ScrollView>
    </LinearLayout>

    <Button
        android:id="@+id/nextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_weight="0"
        android:text="@string/buttonNext"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="#ffffff"
        android:textStyle="bold" />
</LinearLayout>
<!--android:background="#2E7D32"-->
